# LeTexEditor

./: CMakeLists.txt  README.md
Assets/: fontpaths.txt
Assets/Fonts/: InputSans.fnt
Assets/Settings/: lastfile.txt
Assets/Shaders/: text.vs.glsl
Include/: InputSystem.h  Shader.h  TextRenderer.h  UserInterface.h  Utils.hpp  ViewControl.h
Source/: InputSystem.cpp  Shader.cpp  TextRenderer.cpp  UserInterface.cpp  ViewControl.cpp  main.cpp
